# TACC-Docs

./: CONTRIBUTING.md  DEVELOPING.md  Dockerfile  Makefile  README.md  TESTING.md  mkdocs.base.yml  mkdocs.yml  mkdocs.yml.sh  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: build.yml
docs/: aliases.md  index.md  redirect.md  tempsdl.md
docs/aiml/: conda.md  containers.md  pytorch.md  venv.md  venvs.md
docs/basics/: accounts.md  accountstatus.md  conduct.md  datatransfer.md  datatransfer_globus.md  datatransfer_globus_cli.md  datatransfer_ssh.md  dtn.md  faq.md  globusdatatransfer.md  help.md  mfa.md  software.md  usererrors.md  userissues.md
docs/code-examples/: index.md  sdl.md
docs/css/: extra.css  tacc-docs.css
docs/datatransfer/: datatransferguide.md  globus-cli.md  globus.md  recommendations.md  ssh.md
docs/hpc/: corral.md  frontera.md  horizon.md  lonestar6.md  makefile  migration.md  ranch-migration-2025.md  ranch.md  stampede3.md  ug.md  vista.md
docs/include/: ai.md  checklist.md  conda.md  configurestrings.sh  frontera-help.md  frontera-jobaccounting.md  helpsrc.md  horizon-crontab.md  horizon-help.md  horizon-jobaccounting.md  jobaccountingsrc.md  lonestar6-help.md  lonestar6-jobaccounting.md  makefile  nospecificnodes.md  ranch-help.md  scratchpolicy.md  stampede3-help.md  stampede3-jobaccounting.md  suchargenotice.md  tacctips.md  vista-help.md  vista-jobaccounting.md
docs/software/: abaqus.md  alphafold.md  alphafold3.md  ansys.md  gaussian.md  gromacs.md  idev.md  lammps.md  matlab.md  namd.md  openfoam.md  paraview.md  pylauncher.md  quantumespresso.md  remora.md  vasp.md  venvs.md
docs/tutorials/: TAP.md  acls.md  bashstartup.md  blas-lapack.md  ddt.md  (+4 more)
tacc_docs/: README.md
(+80 files in other folders)
