[tool.poetry]
package-mode = false

[project]
name = "tacc-docs"
version = "0.15.1"
description = "TACC Systems Documentation"
authors = [
  { name = "TACC COA CMD", email = "coa-cmd@tacc.utexas.edu" }
]
maintainers = [
  { name = "TACC COA CMD", email = "coa-cmd@tacc.utexas.edu" },
  { name = "TACC ACI WMA", email = "wma-portals@tacc.utexas.edu" }
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "mkdocs==1.4.3",
  "mkdocs-macros-plugin>=1.0.4",
  "mkdocs-tacc>=0.2.0",
]
