[tool.poetry]
package-mode = false
name = "tacc-docs"
version = "0.15.1"
description = "TACC Systems Documentation"
authors = [
  "TACC COA CMD <coa-cmd@tacc.utexas.edu>"
]
maintainers = [
  "TACC COA CMD <coa-cmd@tacc.utexas.edu>",
  "TACC ACI WMA <wma-portals@tacc.utexas.edu>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
# mkdocs (implicitely installed via "mkdocs-tacc")
# NOTE: warnings logged if file included by {% include '…' %} has relative paths
mkdocs-macros-plugin = ">=1.0.4"
mkdocs-exclude-search = "^0.6.6"
mkdocs-tacc = {extras = ["all"], version = "^0.5.0"}
